--- a/PolyEngine/PolyEngine.vcxproj
+++ b/PolyEngine/PolyEngine.vcxproj
@@ -77,7 +77,7 @@
       <PrecompiledHeaderFile>pepch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;PE_PLATFORM_WINDOWS;PE_BUILD_DLL;GLFW_INCLUDE_NONE;PE_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -98,7 +98,7 @@
       <PrecompiledHeaderFile>pepch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;PE_PLATFORM_WINDOWS;PE_BUILD_DLL;GLFW_INCLUDE_NONE;PE_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -123,7 +123,7 @@
       <PrecompiledHeaderFile>pepch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;PE_PLATFORM_WINDOWS;PE_BUILD_DLL;GLFW_INCLUDE_NONE;PE_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -143,18 +143,15 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="src\PolyEngine\Core\Timestep.h" />
-    <ClInclude Include="src\PolyEngine\Platform\OpenGL\OpenGLBuffer.h" />
-    <ClInclude Include="src\PolyEngine\Platform\OpenGL\OpenGLContext.h" />
-    <ClInclude Include="src\PolyEngine\Platform\OpenGL\OpenGLRendererAPI.h" />
-    <ClInclude Include="src\PolyEngine\Platform\OpenGL\OpenGLShader.h" />
-    <ClInclude Include="src\PolyEngine\Platform\OpenGL\OpenGLVertexArray.h" />
-    <ClInclude Include="src\PolyEngine\Platform\Windows\WindowsInput.h" />
-    <ClInclude Include="src\PolyEngine\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\PolyEngine.h" />
     <ClInclude Include="src\PolyEngine\Core\Application.h" />
     <ClInclude Include="src\PolyEngine\Core\Core.h" />
     <ClInclude Include="src\PolyEngine\Core\EntryPoint.h" />
+    <ClInclude Include="src\PolyEngine\Core\Layer.h" />
+    <ClInclude Include="src\PolyEngine\Core\LayerStack.h" />
+    <ClInclude Include="src\PolyEngine\Core\Log.h" />
+    <ClInclude Include="src\PolyEngine\Core\Timestep.h" />
+    <ClInclude Include="src\PolyEngine\Core\Window.h" />
     <ClInclude Include="src\PolyEngine\Events\ApplicationEvent.h" />
     <ClInclude Include="src\PolyEngine\Events\Event.h" />
     <ClInclude Include="src\PolyEngine\Events\KeyEvent.h" />
@@ -162,10 +159,15 @@
     <ClInclude Include="src\PolyEngine\ImGui\ImGuiLayer.h" />
     <ClInclude Include="src\PolyEngine\Input\Input.h" />
     <ClInclude Include="src\PolyEngine\Input\KeyCodes.h" />
-    <ClInclude Include="src\PolyEngine\Core\Layer.h" />
-    <ClInclude Include="src\PolyEngine\Core\LayerStack.h" />
-    <ClInclude Include="src\PolyEngine\Core\Log.h" />
     <ClInclude Include="src\PolyEngine\Input\MouseButtonCodes.h" />
+    <ClInclude Include="src\PolyEngine\Platform\OpenGL\OpenGLBuffer.h" />
+    <ClInclude Include="src\PolyEngine\Platform\OpenGL\OpenGLContext.h" />
+    <ClInclude Include="src\PolyEngine\Platform\OpenGL\OpenGLRendererAPI.h" />
+    <ClInclude Include="src\PolyEngine\Platform\OpenGL\OpenGLShader.h" />
+    <ClInclude Include="src\PolyEngine\Platform\OpenGL\OpenGLTexture.h" />
+    <ClInclude Include="src\PolyEngine\Platform\OpenGL\OpenGLVertexArray.h" />
+    <ClInclude Include="src\PolyEngine\Platform\Windows\WindowsInput.h" />
+    <ClInclude Include="src\PolyEngine\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\PolyEngine\Renderer\Buffer.h" />
     <ClInclude Include="src\PolyEngine\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\PolyEngine\Renderer\OrtographicCamera.h" />
@@ -173,9 +175,9 @@
     <ClInclude Include="src\PolyEngine\Renderer\Renderer.h" />
     <ClInclude Include="src\PolyEngine\Renderer\RendererAPI.h" />
     <ClInclude Include="src\PolyEngine\Renderer\Shader.h" />
-    <ClInclude Include="src\PolyEngine\Core\Window.h" />
-    <ClInclude Include="src\pepch.h" />
+    <ClInclude Include="src\PolyEngine\Renderer\Texture.h" />
     <ClInclude Include="src\PolyEngine\Renderer\VertexArray.h" />
+    <ClInclude Include="src\pepch.h" />
     <ClInclude Include="vendor\glm\glm\common.hpp" />
     <ClInclude Include="vendor\glm\glm\detail\_features.hpp" />
     <ClInclude Include="vendor\glm\glm\detail\_fixes.hpp" />
@@ -592,31 +594,35 @@
     <ClInclude Include="vendor\glm\glm\vec3.hpp" />
     <ClInclude Include="vendor\glm\glm\vec4.hpp" />
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp" />
+    <ClInclude Include="vendor\stb_image\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\PolyEngine\Core\Application.cpp" />
+    <ClCompile Include="src\PolyEngine\Core\Layer.cpp" />
+    <ClCompile Include="src\PolyEngine\Core\LayerStack.cpp" />
+    <ClCompile Include="src\PolyEngine\Core\Log.cpp" />
+    <ClCompile Include="src\PolyEngine\ImGui\ImGuiBuild.cpp" />
+    <ClCompile Include="src\PolyEngine\ImGui\ImGuiLayer.cpp" />
     <ClCompile Include="src\PolyEngine\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\PolyEngine\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\PolyEngine\Platform\OpenGL\OpenGLRendererAPI.cpp" />
     <ClCompile Include="src\PolyEngine\Platform\OpenGL\OpenGLShader.cpp" />
+    <ClCompile Include="src\PolyEngine\Platform\OpenGL\OpenGLTexture.cpp" />
     <ClCompile Include="src\PolyEngine\Platform\OpenGL\OpenGLVertexArray.cpp" />
     <ClCompile Include="src\PolyEngine\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\PolyEngine\Platform\Windows\WindowsWindow.cpp" />
-    <ClCompile Include="src\PolyEngine\Core\Application.cpp" />
-    <ClCompile Include="src\PolyEngine\ImGui\ImGuiBuild.cpp" />
-    <ClCompile Include="src\PolyEngine\ImGui\ImGuiLayer.cpp" />
-    <ClCompile Include="src\PolyEngine\Core\Layer.cpp" />
-    <ClCompile Include="src\PolyEngine\Core\LayerStack.cpp" />
-    <ClCompile Include="src\PolyEngine\Core\Log.cpp" />
-    <ClCompile Include="src\pepch.cpp">
-      <PrecompiledHeader>Create</PrecompiledHeader>
-    </ClCompile>
     <ClCompile Include="src\PolyEngine\Renderer\Buffer.cpp" />
     <ClCompile Include="src\PolyEngine\Renderer\OrtographicCamera.cpp" />
     <ClCompile Include="src\PolyEngine\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\PolyEngine\Renderer\Renderer.cpp" />
     <ClCompile Include="src\PolyEngine\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\PolyEngine\Renderer\Shader.cpp" />
+    <ClCompile Include="src\PolyEngine\Renderer\Texture.cpp" />
     <ClCompile Include="src\PolyEngine\Renderer\VertexArray.cpp" />
+    <ClCompile Include="src\pepch.cpp">
+      <PrecompiledHeader>Create</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="vendor\stb_image\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="vendor\GLFW\GLFW.vcxproj">
