--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,17 @@
 *.out
 *.app
 
-/.vs
-/bin
-/bin-int
+# Binaries
+**/bin
+!vendor/bin/premake/
+bin-int/
+
+# Visual Studio files and folder
+.vs/
+**.sln
+**.vcxproj
+**.vcxproj.filters
+**.vcxproj.user
+
 
 imgui.ini
